<resources>
    <string name="app_name">Books Digest</string>
    <string name="top_text_view">My List</string>
    <string name="book_cover_image">Book cover</string>
    <string name="book_title">Title</string>
    <string name="review_date">Review date</string>
    <string name="author_name">Author\'s name</string>
    <string name="review_here">Review here…</string>
    <string name="edit_review">Edit review</string>
    <string name="cancel">Go back</string>
    <string name="new_review">New review</string>
    <string name="find_movie1">Find movie</string>
    <string name="addReview">Save</string>
    <string name="cancelReview">Cancel</string>
    <string name="titleEdit">Title</string>
    <string name="add_review_here">Add review here...</string>
    <string name="enter_a_book_title">Enter a book title</string>
    <string name="find_movie2">Find movie</string>
    <string name="movie_name">Movie Name</string>
    <string name="plot">Plot</string>
    <string name="release_date">Release Date</string>
    <string name="save_movie">Save movie</string>
    <string name="share">Share</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered">Already Registered? Login here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
</resources>