<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ReviewActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="153dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/book_cover_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bookcover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="222dp"
        android:layout_height="36dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:hint="@string/titleEdit"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/authorEditText"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="11dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:hint="@string/author_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/titleEditText"
        app:layout_constraintStart_toStartOf="@+id/titleEditText"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/review_date"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/titleEditText"
        app:layout_constraintStart_toStartOf="@+id/titleEditText"
        app:layout_constraintTop_toBottomOf="@+id/authorEditText" />

    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_review_here"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/addReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancelReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>