<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BookDetailsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="153dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/book_cover_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bookcover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/book_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorEditText"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:hint="@string/author_name"
        app:layout_constraintEnd_toEndOf="@+id/bookTitle"
        app:layout_constraintStart_toStartOf="@+id/bookTitle"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

    <TextView
        android:id="@+id/dateEditText"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/review_date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/bookTitle"
        app:layout_constraintTop_toBottomOf="@+id/authorEditText" />

    <TextView
        android:id="@+id/reviewEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_review_here"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/editReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/edit_review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>